@@ -6,6 +6,7 @@
 @import "neat";
 
 @import "selectize";
+@import "datetime_picker";
 
 @import "mixins/mixins";
 @import "base/base";
