@@ -9,6 +9,8 @@ class ProductDashboard < Administrate::BaseDashboard
   ]
 
   ATTRIBUTE_TYPES = {
+    created_at: Field::DateTime,
+    updated_at: Field::DateTime,
     description: Field::String,
     image_url: Field::Image,
     name: Field::String,
