@@ -1,6 +1,8 @@
 module ConstantHelpers
   def remove_constants(*constants)
     constants.each { |const| Object.send(:remove_const, const) }
+  rescue NameError => e
+    $stderr.puts "Warning from ConstantHelpers::remove_constants:\n\t#{e}"
   end
 end
 
